# muster-schwabe

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  run.py
backend/: Dockerfile  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/services/: __init__.py  analyzer.py  anonymizer.py
backend/tests/: test_analyzer.py  test_anonymizer.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
src/personal_finance_analyzer/: __init__.py  main.py
